# Thrustmaster4Mac

./: .gitignore  Cargo.toml  README.md  config.toml
clients/AssettoCorsa/: Thrustmaster4Mac.lua  manifest.ini
src/: main.rs
