[package]
name = "Thrustmaster4Mac"
description = "Thrustmaster T300 RS GT custom driver for Wine and Native games on macOS"
version = "0.1.0"
edition = "2021"

[dependencies]
console = "0.15.8"
eyre = "0.6.12"
hidapi = "2.6.1"
if_chain = "1.0.2"
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.117"
once_cell = { version = "1.19.0", features = [] }
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
futures = "0.3.30"
tokio-util = "0.7.11"
abs = "0.1.1"

#[target.'cfg(target_os = "windows")'.dependencies]
#vigem-client = { git = "https://github.com/musikid/vigem-client.git", branch = "ds4_new_api" }

[[bin]]
name = "Thrustmaster4Mac"
path = "src/main.rs"
